# legged_ws

./: .gitignore  AGENTS.md  CLAUDE.md  FIELD_GUIDE.md  README.md
docs/: calibration.md  first_run.md  (+3 more)
src/legged_control/: demo_calibration.py  package.xml  setup.cfg  setup.py
src/legged_control/config/: position_control_sim.rviz  robot.yaml  robot_sim.yaml
src/legged_control/launch/: gazebo_physics.launch.py  gazebo_position_control.launch.py  gazebo_stand.launch.py  locomotion.launch.py  motor_bench.launch.py  position_control_sim.launch.py  robot.launch.py
src/legged_control/legged_control/: fake_motor_bus_node.py  gait_node.py  gazebo_control_bridge.py  joint_aggregator.py  kinematics.py  motor_bench_node.py  motor_bus_node.py  passive_monitor_node.py  policy_monitor_node.py  policy_node.py  position_gait_node.py  stand_node.py  standup_node.py  teleop_node.py  urdf_joint_state_bridge.py  watchdog_node.py
src/legged_control/scripts/: calibrate.py
src/legged_control/tests/: test_gait_node.py  test_gazebo_control_bridge.py  test_joint_aggregator.py  test_kinematics.py  test_motor_bench_node.py  test_motor_bus_node.py  test_passive_monitor_node.py  test_policy_monitor_node.py  test_policy_node.py  test_position_gait_node.py  test_robot_launch.py  test_sim_bridge_nodes.py  test_stand_config_semantics.py  test_stand_node.py  test_standup_node.py  test_teleop_node.py
src/unitree_actuator_sdk/: README.md  package.xml  setup.cfg  setup.py
src/unitree_actuator_sdk/launch/: all_motors.launch.py
src/unitree_actuator_sdk/resource/: unitree_actuator_sdk
(+39 files in other folders)
