<?xml version="1.0"?>
<package format="3">
  <name>legged_control</name>
  <version>0.1.0</version>
  <description>Locomotion control stack for quadruped robot.</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>joy</exec_depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
