<?xml version="1.0"?>
<package format="3">
  <name>unitree_actuator_sdk</name>
  <version>0.0.1</version>
  <description>ROS 2 Python node package for the prebuilt Unitree actuator SDK.</description>

  <maintainer email="support@unitree.com">Unitree Robotics</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
